# watcharr

./: .env.example  LICENSE  README.md  pyproject.toml
app/streaming_checker/core/: config.py
app/streaming_checker/services/: runner.py  scheduler.py
app/streaming_checker/storage/: __init__.py  sqlite.py
app/streaming_checker/web/: app.py
app/watcharr/core/: provider_mappings.py
app/watcharr/services/: runner.py
app/watcharr/storage/: sqlite.py
app/watcharr/web/: app.py
app/watcharr/web/static/: manifest.webmanifest  sw.js
tests/: test_provider_normalizer.py  test_scan_result_metadata.py  test_scan_results_ui.py  test_scheduler_service.py  test_sqlite_storage.py  test_web_config.py
